# Lmaobox_Profiler

./: .gitignore  .luarc.json  BuildCollector.bat  Bundle.bat  BundleAndDeploy.bat  DUAL_CONTEXT_PROFILER.md  Profiler.lua  README.md  bundle.js  example.lua  ive debug logging to understand why only 1 function shows when 18 are tracked  package-lock.json  package.json  watch.js
%LOCALAPPDATA%/lua/: example.lua  simple_test.lua
.github/workflows/: release.yml
Profiler/: Main.lua  Shared.lua  collector.lua  config.lua  draw_wrapper.lua  globals.lua  microprofiler.lua  profiler.lua  timing.lua  ui_body.lua  ui_body_simple.lua  ui_colors.lua  ui_layout.lua  ui_render.lua  ui_top.lua  ui_warning.lua
examples/: deployexamples.bat  dual_context_example.lua  example.lua  fast_players_profile.lua  live_demo.lua  multi_tick_test.lua  proof.lua  simple_test.lua  test_flamegraphs.lua  tick_profiler.lua  unload_profiler.lua
scripts/: rapid-dev.ps1  restart-collector.ps1
timing_collector/: README.md  USAGE.txt  build-fast.bat  build.bat  go.mod  main.go  port_free_unix.go  port_free_windows.go  run_collector.bat  stop_collector.bat
timing_collector/cmd/timing_collector/: browser_unix.go  browser_windows.go  exec_other.go  exec_windows.go  flamegraph_rust.go  flamegraph_spans.go  (+19 more)
timing_collector/flamegraph_gen/: Cargo.toml
timing_collector/flamegraph_gen/src/: main.rs
timing_collector/run/: START_HERE.txt  test.folded
timing_collector/scripts/: patch_speedscope_zoom.ps1  simulate_ticks.ps1
timing_server/: ARCHIVED.md  Cargo.toml
timing_server/src/: main.rs
(+4 files in other folders)
